--- a/ecommerce/src/app/modules/register/register.component.html
+++ b/ecommerce/src/app/modules/register/register.component.html
@@ -29,19 +29,27 @@
                     <p class="b2 mb--55">Enter your detail below</p>
                     <form class="singin-form">
                         <div class="form-group">
-                            <label>User Name</label>
-                            <input type="text" class="form-control" name="username" value="anniemario">
+                            <label>Nombres Completos: *</label>
+                            <input type="text" class="form-control" name="name" [(ngModel)]="name">
+                        </div>
+                        <div class="form-group">
+                            <label>Apellidos Completos: *</label>
+                            <input type="text" class="form-control" name="surname" [(ngModel)]="surname">
                         </div>
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" class="form-control" name="email" value="annie@example.com">
+                            <input type="email" class="form-control" name="email" [(ngModel)]="email" >
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" class="form-control" name="password" value="123456789">
+                            <label>Contraseña: *</label>
+                            <input type="password" class="form-control" name="password" [(ngModel)]="password" >
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="axil-btn btn-bg-primary submit-btn">Create Account</button>
+                            <label>Repetir Contraseña: *</label>
+                            <input type="password" class="form-control" name="repet_password" [(ngModel)]="repet_password" >
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="axil-btn btn-bg-primary submit-btn" (click)="registro()">Registrar Cuenta</button>
                         </div>
                     </form>
                 </div>
