--- a/Discipulo/Assets/css/login.css
+++ b/Discipulo/Assets/css/login.css
@@ -2,6 +2,10 @@ body{
     overflow-x: hidden;
 }
 
+#Login-btn{
+    display: none;
+}
+
 #sub{
     font-size: .9rem;
     color: #818181;
@@ -30,4 +34,38 @@ body{
 
 #forgot:hover{
     color: rgb(230, 138, 0);
+}
+
+/* Estilos para los contenedores de formularios */
+.form-container {
+    position: relative;
+    width: 100%;
+    transition: height 0.5s ease-in-out;
+}
+
+#form-login, #form-register {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    transition: transform 0.4s ease-in-out, opacity 0.1s ease-in-out;
+}
+
+#form-login {
+    left: 0;
+}
+
+#form-register {
+    left: 0;
+    transform: translateX(100%);
+    opacity: 0;
+}
+
+.slide-left {
+    transform: translateX(-100%) !important;
+    opacity: 0 !important;
+}
+
+.slide-right {
+    transform: translateX(0) !important;
+    opacity: 1 !important;
 }
